[package]
name = "rouille"
version = "3.0.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alqemyst/rouille"
documentation = "http://docs.rs/rouille"
description = "High-level idiomatic web framework."
readme = "README.md"
keywords = ["web", "framework", "http", "rest"]
categories = ["web-programming::http-server", "web-programming::websocket"]

[features]
default = ["gzip", "brotli"]
brotli = ["brotli2"]
gzip = ["deflate"]
ssl = ["tiny_http/ssl"]

[dependencies]
base64 = "0.11"
brotli2 = { version = "0.3", optional = true }
chrono = "0.4"
filetime = "0.2"
deflate = { version = "0.8", optional = true, features = ["gzip"] }
multipart = { version = "0.16", default-features = false, features = ["server"] }
percent-encoding = "2"
rand = "0.7"
serde = "1"
serde_derive = "1"
serde_json = "1"
sha1 = "0.6"
term = "0.6"
time = "0.2"
tiny_http = { git = "https://github.com/alqemyst/tiny-http.git" }
url = "2"
threadpool = "1"
num_cpus = "1"

[dev-dependencies]
postgres = { version = "0.17", default-features = false }
log = "0.4"
